@@ -12,13 +12,13 @@ ext.java9Args = [
         "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
         // For MappingChange, NonIterableChange across files
         "--add-exports=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
-        // For VersionInfo in VersionChecker
-        "--add-exports=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
+        //For SpreadsheetView
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior.TableViewBehavior=org.controlsfx.controls",
+        //For SpreadsheetView
+        "--add-exports=javafx.base/com.sun.javafx.event.EventHandlerManager=org.controlsfx.controls"
 ]
 
 ext.java9RuntimeArgs = [
-        // For accessing VirtualFlow field from the base class in GridViewSkin
-        "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
         // For accessing getChildren in ImplUtils
         "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls"
 ]
@@ -26,34 +26,13 @@ ext.java9RuntimeArgs = [
 subprojects {
 
     apply plugin: 'java'
-    apply plugin: 'eclipse'
-    apply plugin: 'idea'
     apply plugin: 'maven'
+    apply plugin: 'org.openjfx.javafxplugin'
     apply from  : '../mavenPublish.gradle'
 
-    Properties cfg = new Properties()
-    cfg.load(new FileInputStream("$rootDir/controlsfx-build.properties"))
-
-    ext {
-      artifact_suffix       = cfg.artifact_suffix
-      specification_title   = cfg.controlsfx_specification_title  //'Java 8u20'
-      specification_version = cfg.controlsfx_specification_version //'8.20.7'
-      controlsfx_name       = 'controlsfx'
-      fxsampler_name        = 'fxsampler'
-      fxsampler_version     = cfg.fxsampler_specification_version + artifact_suffix
-      fxsampler_mainClass   = 'org.controlsfx.fxsampler/fxsampler.FXSampler'
-    }
-
-    group = 'org.controlsfx'
-    version = specification_version + artifact_suffix
-
-    sourceCompatibility = '1.9'
-    targetCompatibility = '1.9'
-
-    if (JavaVersion.current().isJava11Compatible()) {
-        apply plugin: 'org.openjfx.javafxplugin'
-    }
-
+    sourceCompatibility = '11'
+    targetCompatibility = '11'
+    
     repositories {
         mavenCentral()
     }
@@ -76,13 +55,13 @@ subprojects {
     task sourceJar(type: Jar) {
         from sourceSets.main.java
         from sourceSets.main.resources
-        classifier = 'sources'
+        archiveClassifier = 'sources'
     }
 
     task javadocJar(type: Jar) {
         dependsOn javadoc
         from javadoc.destinationDir
-        classifier = 'javadoc'
+        archiveClassifier = 'javadoc'
     }
 
     artifacts {
@@ -95,5 +74,10 @@ subprojects {
         doLast {
             println "$project.version"
         }
+    }
+
+    // Do not publish Gradle modules
+    tasks.withType(GenerateModuleMetadata) {
+        enabled = false
     }
 }
